dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guu-band-dev-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: dev.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guu-band-dev
                port:
                  number: 80
